--- a/DsWorkAndroid/res/layout/fragment_index_1.xml
+++ b/DsWorkAndroid/res/layout/fragment_index_1.xml
@@ -9,9 +9,9 @@
 	    <include android:id="@+id/OleTab"  layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	</TableRow>
 	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
-	    <include android:id="@+id/web" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	    <include android:id="@+id/SlidingMenu" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	    <include android:id="@+id/FragmentDemo" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
+	    <include android:id="@+id/empty" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	</TableRow>
 	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
 	    <include android:id="@+id/html_tab" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
