--- a/DsWorkAndroid/res/layout/fragment_index_2.xml
+++ b/DsWorkAndroid/res/layout/fragment_index_2.xml
@@ -8,4 +8,9 @@
 	    <include android:id="@+id/alphabet" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	    <include android:id="@+id/loadmore" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	</TableRow>
+	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
+	    <include android:id="@+id/web" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
+	    <include android:id="@+id/empty" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
+	    <include android:id="@+id/empty" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
+	</TableRow>
 </TableLayout>
