--- a/DsWorkAndroid/res/layout/fragment_index_3.xml
+++ b/DsWorkAndroid/res/layout/fragment_index_3.xml
@@ -5,7 +5,7 @@
     android:paddingTop="20dp">
 	<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">
 	    <include android:id="@+id/webapp" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
-	    <include android:id="@+id/empty" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
+	    <include android:id="@+id/singleapp" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	    <include android:id="@+id/empty" layout="@layout/shortcut" android:layout_width="0dp" android:layout_weight="1"/>
 	</TableRow>
 </TableLayout>
