--- a/DsWorkAndroid/res/layout/activity_person_search.xml
+++ b/DsWorkAndroid/res/layout/activity_person_search.xml
@@ -50,7 +50,7 @@
 		    android:id="@+id/amount"/>
     </LinearLayout>
     <Button 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/btn_search"
