--- a/DsWorkAndroid/res/layout/activity_demo_item.xml
+++ b/DsWorkAndroid/res/layout/activity_demo_item.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:gravity="center_vertical"
-        android:id="@+id/chk"/>
-	<TextView 
-	    android:layout_width="120dp"
-	    android:layout_height="50dp"
-	    android:textSize="22sp"
-	    android:id="@+id/id"
-	    />
-	<TextView 
-	    android:layout_width="120dp"
-	    android:layout_height="50dp"
-	    android:textSize="22sp"
-	    android:id="@+id/title"
-	    />
-	<TextView 
-	    android:layout_width="120dp"
-	    android:layout_height="50dp"
-	    android:textSize="22sp"
-	    android:id="@+id/foundtime"
-	    />
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+	android:descendantFocusability="blocksDescendants">
+  	<include 
+  	    android:id="@+id/item_ckb"
+  	    layout="@layout/item_ckb" 
+  	    android:layout_width="wrap_content" 
+  	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"/>
+	<LinearLayout 
+	    android:orientation="vertical"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+   		android:layout_marginLeft="20dp"
+	    android:layout_toRightOf="@id/item_ckb">
+		<TextView 
+		    android:id="@+id/title"
+		    android:layout_width="120dp"
+		    android:layout_height="wrap_content"
+		    android:textSize="22sp"/>
+		<LinearLayout 
+		    android:orientation="horizontal"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="right">
+			<TextView 
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="@string/foundtime"
+			    />
+			<TextView 
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text=":"
+			    />
+			<TextView 
+			    android:id="@+id/foundtime"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="right"/>
+		</LinearLayout>
+	</LinearLayout>
+	<include 
+	    layout="@layout/item_menu_btn" 
+	    android:layout_width="wrap_content" 
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentRight="true"/>
+</RelativeLayout>
