--- a/DsWorkAndroid/res/layout/activity_demo.xml
+++ b/DsWorkAndroid/res/layout/activity_demo.xml
@@ -7,32 +7,32 @@
 	    android:orientation="horizontal"
 	    android:background="@color/gray"
 	    android:layout_width="fill_parent"
-	    android:layout_height="30dp" >
+	    android:layout_height="30dp" 
+	    android:paddingLeft="10dip"
+	    android:paddingRight="10dip"
+	    >
 	    <CheckBox
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:visibility="gone"
-	        android:gravity="center_vertical"
 	        android:id="@+id/chkAll"/>
 		<TextView 
-		    android:layout_width="120dp"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/id"
 		    />
 		<TextView 
-		    android:layout_width="150dp"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="30dp"
 		    android:text="@string/title"
-		    />
-		<TextView 
-		    android:layout_width="150dp"
-		    android:layout_height="wrap_content"
-		    android:text="@string/foundtime"
 		    />
 	</LinearLayout>
     <dswork.android.ui.MultiCheck.MultiCheckListView
         android:id="@+id/listView" 
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
+        android:layout_marginLeft="10dip"
+   		android:layout_marginRight="10dip"
         android:fastScrollEnabled="true"/>
 </LinearLayout>
