--- a/DsWorkAndroid/res/layout/activity_person.xml
+++ b/DsWorkAndroid/res/layout/activity_person.xml
@@ -15,29 +15,20 @@
 	        android:gravity="center_vertical"
 	        android:id="@+id/chkAll"/>
 		<TextView 
-		    android:layout_width="120dp"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/id"
 		    />
 		<TextView 
 		    android:layout_width="120dp"
 		    android:layout_height="wrap_content"
+   			android:layout_marginLeft="35dp"
 		    android:text="@string/name"
 		    />
 		<TextView 
-		    android:layout_width="120dp"
+		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/sortkey"
-		    />
-		<TextView 
-		    android:layout_width="150dp"
-		    android:layout_height="wrap_content"
-		    android:text="@string/phone"
-		    />
-		<TextView 
-		    android:layout_width="150dp"
-		    android:layout_height="wrap_content"
-		    android:text="@string/amount"
 		    />
 	</LinearLayout>
     <dswork.android.ui.MultiCheck.MultiCheckListView
