--- a/DsWorkAndroid/res/layout/activity_demo_upd.xml
+++ b/DsWorkAndroid/res/layout/activity_demo_upd.xml
@@ -56,7 +56,7 @@
 		    android:id="@+id/foundtime"/>
     </LinearLayout>
     <Button 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/btn_save"
