--- a/DsWorkAndroid/res/layout/fragment_demo_list.xml
+++ b/DsWorkAndroid/res/layout/fragment_demo_list.xml
@@ -44,4 +44,12 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    style="@android:attr/progressBarStyleLargeInverse"/>
+	<ImageView 
+	    android:id="@+id/refresh"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_marginRight="10dp"
+	    android:layout_marginBottom="10dp"
+	    android:layout_gravity="right|bottom"
+	    android:src="@android:drawable/ic_menu_rotate"/>
 </FrameLayout>
