--- a/web/share/dswork/Views/Commons/GetById.cshtml
+++ b/web/share/dswork/Views/Commons/GetById.cshtml
@@ -7,10 +7,10 @@
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
 <script type="text/javascript" src="/web/js/jskey/jskey_core.js"></script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
-<script type="text/javascript" src="/web/js/dswork/getById.js"></script>
 <script type="text/javascript">
-    $dswork.showNavTitle = "\u660e\u7ec6";
-    $(function(){$dswork.showNavigation($dswork.showNavTitle);});
+	$(function(){try{$(".form_title").css("width", "20%");}catch(e){}});
+	$dswork.showNavTitle = "\u660e\u7ec6";
+	$(function(){$dswork.showNavigation($dswork.showNavTitle);});
 </script>
 @RenderSection("head", false)
 </head>
