--- a/DsWorkJava/.settings/org.eclipse.wst.common.component
+++ b/DsWorkJava/.settings/org.eclipse.wst.common.component
@@ -10,6 +10,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.web"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/org.hibernate.dialect"/>
         <wb-resource deploy-path="/" source-path="/web"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="DsWorkJava"/>
         <property name="java-output-path" value="/DsWorkJava/web/WEB-INF/classes"/>
     </wb-module>
