--- a/CodeBuilder/builder/template/java/idao.vm
+++ b/CodeBuilder/builder/template/java/idao.vm
@@ -1,15 +1,15 @@
 #set($Frame=$vo.GetParam('Frame'))
 #set($Namespace=$vo.GetParam('Namespace'))
-#set($Module=$vo.GetParam('Module'))
+#set($Module=$vo.GetParam('Javamodule'))
 #set($Model=$vo.GetParam('Model'))
 /**
  * ${vo.TableComment}Dao
  */
-package ${Namespace}.dao.${Module};
+package ${Namespace}.dao${Module};
 
 import org.springframework.stereotype.Repository;
 import ${Frame}.core.db.BaseDao;
-import ${Namespace}.model.${Module}.${Model};
+import ${Namespace}.model${Module}.${Model};
 
 @Repository
 @SuppressWarnings("unchecked")
