--- a/CodeBuilder/builder/template/java/jsp/add2.vm
+++ b/CodeBuilder/builder/template/java/jsp/add2.vm
@@ -1,9 +1,9 @@
 #set($Frame=$vo.GetParam('Frame'))
 #set($Namespace=$vo.GetParam('Namespace'))
-#set($Module=$vo.GetParam('Module'))
+#set($Module=$vo.GetParam('Javamodule'))
 #set($Model=$vo.GetParam('Model'))
 <%@page language="java" pageEncoding="UTF-8" import="java.util.*,${Frame}.web.MyRequest,${Frame}.core.util.*,
-${Namespace}.model.${Module}.${Model},
+${Namespace}.model${Module}.${Model},
 ${Namespace}.MyFactory"%><%
 try
 {
