--- a/CodeBuilder/builder/template/java/mvc/controller.vm
+++ b/CodeBuilder/builder/template/java/mvc/controller.vm
@@ -1,6 +1,7 @@
 #set($Frame=$vo.GetParam('Frame'))
 #set($Namespace=$vo.GetParam('Namespace'))
-#set($Module=$vo.GetParam('Module'))
+#set($Module=$vo.GetParam('Javamodule'))
+#set($Webmodule=$vo.GetParam('Webmodule'))
 #set($Model=$vo.GetParam('Model'))
 #set($ModelName=$vo.GetParam('ModelName'))
 /**
@@ -8,7 +9,7 @@
  * 开发人员:${developer}
  * 创建时间:${currentDate}
  */
-package ${Namespace}.controller.${Module};
+package ${Namespace}.controller${Module};
 
 import java.io.PrintWriter;
 import java.util.Map;
@@ -22,12 +23,11 @@ import ${Frame}.core.page.Page;
 import ${Frame}.core.page.PageNav;
 import ${Frame}.core.page.PageRequest;
 import ${Frame}.core.util.CollectionUtil;
-import ${Namespace}.model.${Module}.${Model};
-import ${Namespace}.service.${Module}.${Model}Service;
+import ${Namespace}.model${Module}.${Model};
+import ${Namespace}.service${Module}.${Model}Service;
 
 @Controller
-@SuppressWarnings("unchecked")
-@RequestMapping("${urlpath}/${Module}")
+@RequestMapping("${Webmodule}")
 public class ${Model}Controller
 {
 	@Autowired
@@ -37,7 +37,7 @@ public class ${Model}Controller
 	@RequestMapping("/add${Model}1")
 	public String add${Model}1()
 	{
-		return "${urlpath}/${Module}/add${Model}.jsp";
+		return "${Webmodule}/add${Model}.jsp";
 	}
 	
 	@RequestMapping("/add${Model}2")
@@ -78,7 +78,7 @@ public class ${Model}Controller
 		Long id = req.getLong("keyIndex");
 		request.setAttribute("po", service.get(id));
 		request.setAttribute("page", req.getInt("page", 1));
-		return "${urlpath}/${Module}/upd${Model}.jsp";
+		return "${Webmodule}/upd${Model}.jsp";
 	}
 	
 	@RequestMapping("/upd${Model}2")
@@ -109,7 +109,7 @@ public class ${Model}Controller
 		PageNav pageNav = new PageNav(request, pageModel);
 		request.setAttribute("pageModel", pageModel);
 		request.setAttribute("pageNav", pageNav);
-		return "${urlpath}/${Module}/get${Model}.jsp";
+		return "${Webmodule}/get${Model}.jsp";
 	}
 
 	//明细
@@ -119,6 +119,6 @@ public class ${Model}Controller
 		MyRequest req = new MyRequest(request);
 		Long keyIndex = req.getLong("keyIndex");
 		request.setAttribute("po", service.get(keyIndex));
-		return "${urlpath}/${Module}/get${Model}ById.jsp";
+		return "${Webmodule}/get${Model}ById.jsp";
 	}
 }
