--- a/CodeBuilder/builder/template/csharp/get.vm
+++ b/CodeBuilder/builder/template/csharp/get.vm
@@ -18,8 +18,8 @@ $(function()
 	<tr>
 		<td class="title">${vo.TableComment}列表</td>
 		<td class="menuTool">
-			<a class="add" href="Add${Model}1.htm?page=@ViewBag.pageModel.CurrentPage">添加</a>
-			<a class="del" id="listFormDelAll" href="#">删除所选</a>
+			<a class="insert" href="Add${Model}1.htm?page=@ViewBag.pageModel.CurrentPage">添加</a>
+			<a class="delete" id="listFormDelAll" href="#">删除所选</a>
 		</td>
 	</tr>
 </table>
