--- a/web/share/dswork/Views/Commons/AddAjax.cshtml
+++ b/web/share/dswork/Views/Commons/AddAjax.cshtml
@@ -13,7 +13,7 @@
     $dswork.showNavTitle = "\u6dfb\u52a0";
     $(function(){$dswork.showNavigation($dswork.showNavTitle);});
 </script>
-<script type="text/javascript" src="/web/js/dswork/ajaxSubmit.js"></script>
+<script type="text/javascript">$dswork.doAjax = true;</script>
 @RenderSection("head", false)
 </head>
 <body>
