--- a/CodeBuilder/builder/template/java/base/get.vm
+++ b/CodeBuilder/builder/template/java/base/get.vm
@@ -11,10 +11,13 @@
 	<title>${vo.TableComment}</title>
 	<%@include file="/commons/include/get.jsp" %>
 <script type="text/javascript">
-${mf}(function()
-{
+${mf}(function(){
 	${mf}${Frame.ToLower()}.page.menu("del${Model}.htm", "upd${Model}1.htm", "get${Model}ById.htm", "${mf}{pageModel.currentPage}");
 });
+${mf}${Frame.ToLower()}.doAjax = true;
+${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.type == 1){
+	location.href = "get${Model}.htm?page=${mf}{pageModel.currentPage}";
+}}
 </script>
 <%@include file="/commons/include/getEasyui.jsp" %>
 </head> 
