--- a/CodeBuilder/builder/template/java/jsp/add1.vm
+++ b/CodeBuilder/builder/template/java/jsp/add1.vm
@@ -17,13 +17,9 @@ request.setAttribute("param", req.getParameterValueMap(false, false));
 	<title></title>
 	<%@include file="/commons/include/addAjax.jsp" %>
 	<script type="text/javascript">
-	${mf}${Frame.ToLower()}.callback = function()
-	{
-		if(${mf}${Frame.ToLower()}.result.type == 1)
-		{
-			location.href = "get${Model}.jsp";
-		}
-	}
+	${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.type == 1){
+		location.href = "get${Model}.jsp";
+	}}
 	</script>
 </head>
 <body>
