--- a/CodeBuilder/builder/template/java/jsp/del.vm
+++ b/CodeBuilder/builder/template/java/jsp/del.vm
@@ -4,6 +4,14 @@
 <%@page language="java" pageEncoding="UTF-8" import="java.util.*,${Frame}.web.MyRequest,${Frame}.core.util.*,
 ${Namespace}.MyFactory"%><%
 MyRequest req = new MyRequest(request);
-MyFactory.get${Model}Service().deleteBatch(CollectionUtil.toLongArray(req.getLongArray("keyIndex", 0)));
-response.sendRedirect(req.getRefererURL());
+try
+{
+	MyFactory.get${Model}Service().deleteBatch(CollectionUtil.toLongArray(req.getLongArray("keyIndex", 0)));
+	out.print(1);
+}
+catch (Exception e)
+{
+	e.printStackTrace();
+	out.print("0:" + e.getMessage());
+}
 %>
