--- a/CodeBuilder/builder/template/java/jsp/upd1.vm
+++ b/CodeBuilder/builder/template/java/jsp/upd1.vm
@@ -19,13 +19,9 @@ request.setAttribute("page", req.getInt("page", 1));
 	<title></title>
 	<%@include file="/commons/include/updAjax.jsp" %>
 	<script type="text/javascript">
-	${mf}${Frame.ToLower()}.callback = function()
-	{
-		if($${Frame.ToLower()}.result.type == 1)
-		{
-			location.href = "get${Model}.jsp?page=${mf}{page}";
-		}
-	}
+	${mf}${Frame.ToLower()}.callback = function(){if($${Frame.ToLower()}.result.type == 1){
+		location.href = "get${Model}.jsp?page=${mf}{page}";
+	}}
 	</script>
 </head>
 <body>
