--- a/CodeBuilder/builder/template/java/base/add.vm
+++ b/CodeBuilder/builder/template/java/base/add.vm
@@ -12,13 +12,9 @@
 	<title></title>
 	<%@include file="/commons/include/addAjax.jsp" %>
 	<script type="text/javascript">
-	${mf}${Frame.ToLower()}.callback = function()
-	{
-		if(${mf}${Frame.ToLower()}.result.type == 1)
-		{
-			location.href = "get${Model}.htm";
-		}
-	}
+	${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.type == 1){
+		location.href = "get${Model}.htm";
+	}}
 	</script>
 </head>
 <body>
