--- a/CodeBuilder/builder/template/java/mvc/upd.vm
+++ b/CodeBuilder/builder/template/java/mvc/upd.vm
@@ -12,13 +12,9 @@
 	<title></title>
 	<%@include file="/commons/include/updAjax.jsp" %>
 	<script type="text/javascript">
-	${mf}${Frame.ToLower()}.callback = function()
-	{
-		if($${Frame.ToLower()}.result.type == 1)
-		{
-			location.href = "get${Model}.htm?page=${mf}{page}";
-		}
-	}
+	${mf}${Frame.ToLower()}.callback = function(){if($${Frame.ToLower()}.result.type == 1){
+		location.href = "get${Model}.htm?page=${mf}{page}";
+	}}
 	</script>
 </head>
 <body>
