--- a/CodeBuilder/htmlgen/template/edit.vm
+++ b/CodeBuilder/htmlgen/template/edit.vm
@@ -11,13 +11,12 @@
 <script type="text/javascript" src="../../js/jquery/jquery.form.js"></script>
 <script type="text/javascript" src="../../js/jskey/jskey_core.js"></script>
 <script type="text/javascript" src="../../js/dswork/dswork.js"></script>
-<script type="text/javascript" src="../../js/dswork/mask/mask.js"></script>
-<script type="text/javascript" src="../../js/dswork/add.js"></script>
+<script type="text/javascript" src="../../js/dswork/form.js"></script>
 <script type="text/javascript">
 $dswork.showNavTitle = "编辑";
 $(function(){$dswork.showNavigation($dswork.showNavTitle);});
 </script>
-<script type="text/javascript" src="../../js/dswork/ajaxSubmit.js"></script>
+<script type="text/javascript">$dswork.doAjax = true;</script>
 	<script type="text/javascript">
 	$dswork.callback = function()
 	{
