--- a/CodeBuilder/htmlgen/template/get.vm
+++ b/CodeBuilder/htmlgen/template/get.vm
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../../js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="../../themes/default/frame.css" />
 <script type="text/javascript" src="../../js/jquery/jquery.js"></script>
+<script type="text/javascript" src="../../js/jquery/jquery.form.js"></script>
 <script type="text/javascript" src="../../js/jskey/jskey_core.js"></script>
 <script type="text/javascript" src="../../js/dswork/dswork.js"></script>
 <script type="text/javascript" src="../../js/dswork/get.js"></script>
