--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -1,9 +1,8 @@
-/*系统后台局css*/
-/*IE6背景图片不缓存BUG*/
+/*IE6背景图缓存BUG*/
 * {filter:expression(document.execCommand("BackgroundImageCache", false, true));}
 /** {filter:gray;}*/
 
-/*-------------全局样式-------------*/
+/*---全局---*/
 html,body {height:100%;border:0;padding:0px;margin:0px;}
 body {font-family:"宋体"}/*font-family:"宋体", tahoma, "Arial Narrow", arial, sans-serif;*/
 body, div, p, select, span, tr, td, a, input, textarea {font-size:12px;color:#182a2d;}
@@ -11,21 +10,20 @@ form {margin:0px;padding:0px;}
 body, table, tr {background-color:#ffffff;}
 table.normal {width:100%;}
 
-/*-------------信息提示-------------*/
+/*---提示---*/
 span.msg {color:#0000ff;}
 span.tips {color:#0000ff;}
-span.imp {padding-left:3px;color:#ff0000;font-weight:bold;}/*必填框*号*/
+span.imp {padding-left:3px;color:#ff0000;font-weight:bold;}/*必填*号*/
 
-/*-------------超 链 接-------------*/
+/*---超 链 接---*/
 a {text-decoration:none;}
-a:link {color:#182a2d;}/*未访问过的超链接*/
-a:visited {color:#182a2d;}/*访问过的超链接*/
-a:hover {color:#205e92;}/*鼠标指向的超链接*/
-a:active {color:#182a2d;}/*激活的超链接*/
+a:link {color:#182a2d;}/*未访问*/
+a:visited {color:#182a2d;}/*已访问*/
+a:hover {color:#205e92;}/*指向*/
+a:active {color:#182a2d;}/*激活*/
 
-/*-------------工 具 箱-------------*/
-.menuTool {white-space:normal;}
-/*功能菜单单元格*/
+/*---工 具 箱---*/
+.menuTool {white-space:nowrap;}
 .menuTool a {padding:2px 0px 2px 18px;}
 
 .menuTool a.excel {background:url(img/file/excel.gif) 0px 0px no-repeat;}
@@ -143,13 +141,13 @@ a:active {color:#182a2d;}/*激活的超链接*/
 .menuTool-user    {background:url(img/menu.png) 0px -625px no-repeat;}
 .menuTool-warn    {background:url(img/menu.png) 0px -650px no-repeat;}
 
-/*-------------页面标题-------------*/
+/*---页面标题---*/
 table.listLogo {width:100%;border:#c2c2c2 solid 1px;}
 table.listLogo td {color:#000000;background-color:#d9e5fd;background:url(img/bg/panel_logo.png) 0px 0px repeat-x;height:25x;text-align:right;vertical-align:middle;white-space:nowrap;padding:5px 5px 5px 5px;}
 table.listLogo td.title {text-align:left;}
 table.listLogo td.panel {background:url(img/bg/panel_title.png) 0px 0px repeat-x;}
 
-/*-------------表单-------------*/
+/*---表单---*/
 input.button, input.delete {padding:2px 3px 0px 3px;cursor:pointer;color:#000000;border:#000000 solid 1px;}
 input.button {background:url(img/button/button.gif) 0px 0px repeat-x;}
 input.delete {border:none;width:18px;height:18px;background:url(img/button/delete.gif) 0px 0px no-repeat;}
@@ -158,7 +156,7 @@ input.readonlytext {width:200px;background-color:#e1e1e1;color:#000000;}
 textarea.readonlytext {width:100%;background-color:#e1e1e1;color:#000000;}
 div.line {display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidden;}
 
-/*-------------查询表单-------------*/
+/*---查询表单---*/
 .queryTable {width:100%;border:#c2c2c2 solid 1px;}
 .queryTable td {background-color:#ffffff;height:25px;padding:0px 0px 0px 0px;}
 .queryTable td.title {text-align:right;padding-left:1px;}
@@ -166,7 +164,7 @@ div.line {display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hid
 .queryTable td.query {text-align:center;}
 .queryTable input.button {background:url(img/button/query.gif) 0px 0px repeat-x;}/*input.button*/
 
-/*-------------数据列表-------------*/
+/*---数据列表---*/
 /*数据表格*/
 .topTable, .bottomTable, .listTable {width:100%;border:#c2c2c2 solid 1px;background-color:#c2c2c2;}
 .topTable, .bottomTable, .listTable tr {height:25px;}
@@ -188,7 +186,7 @@ div.line {display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hid
 /*默认*/.listTable tr.list {height:23px;}
 .listTable tr.list td {background-color:#ffffff;}
 
-/*-------------翻页导航-------------*/
+/*---翻页导航---*/
 .pageview, .pageview * {margin:0px;padding:0px;font-family:tahoma;color:#182a2d;font-size:12px;height:30px;line-height:30px;vertical-align:text-middle;}
 .pageview {float:right;font-family:tahoma;text-align:right;padding:0px 10px 0px 0px;width:100%;}
 .pageview a {text-decoration:none;border:none;}
@@ -205,7 +203,7 @@ div.line {display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hid
 .pageview input.go   {width:22px;cursor:pointer;border:none;background:url(img/pageview/go.gif) 0px 0px no-repeat;font-size:10px;font-weight:bold;}
 
 
-/*-------------表单表格样式-------------*/
+/*---表单表格样式---*/
 td.form_title, td.form_input {height:25px;padding-left:3px;padding-right:3px;}
 /*表单标题*/td.form_title {text-align:right;background-color:#e6eefe;}
 /*表单内容*/td.form_input {text-align:left;background-color:#ffffff;}
@@ -225,7 +223,5 @@ td.form_bottom {height:30px;background-color:#ffffff;text-align:center;vertical-
 .divMenuRight ul li.sep {padding:0px;height:1px;background-color:#dddddd;}
 
 #div_maskContainer {display:none;}
-/*蒙版样式*/
 #div_Mask {z-index:9999;position:absolute;left:0px;top:0px;background-color:#EFF4FA;filter:alpha(opacity = 100);}
-/*显示信息样式*/
 #div_loading {z-index:10000;width:300px;height:60px;position:absolute;border:1px outset #B4E0F2;padding-top:40px;text-align:center;background-color:#E9F0F9;filter:alpha(opacity = 100);!important}
