--- a/DsWorkAndroid/res/layout/activity_demo_item.xml
+++ b/DsWorkAndroid/res/layout/activity_demo_item.xml
@@ -43,7 +43,7 @@
 		</LinearLayout>
 	</LinearLayout>
 	<include 
-	    layout="@layout/item_menu_btn" 
+	    layout="@layout/item_menu" 
 	    android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"/>
