--- a/DsWorkAndroid/res/layout/activity_person.xml
+++ b/DsWorkAndroid/res/layout/activity_person.xml
@@ -31,7 +31,7 @@
 		    android:text="@string/sortkey"
 		    />
 	</LinearLayout>
-    <dswork.android.ui.MultiCheck.MultiCheckListView
+    <dswork.android.lib.ui.MultiCheck.MultiCheckListView
         android:id="@+id/listView" 
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
