--- a/DsWorkAndroid/res/layout/activity_person_item.xml
+++ b/DsWorkAndroid/res/layout/activity_person_item.xml
@@ -27,7 +27,7 @@
 		    android:id="@+id/sortkey"/>
   	</LinearLayout>
 	<include 
-	    layout="@layout/item_menu_btn" 
+	    layout="@layout/item_menu" 
 	    android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"/>
