--- a/DsWorkAndroid/res/layout/fragment_demo_list.xml
+++ b/DsWorkAndroid/res/layout/fragment_demo_list.xml
@@ -31,7 +31,7 @@
 			    android:text="@string/title"
 			    />
 		</LinearLayout>
-	    <dswork.android.ui.MultiCheck.MultiCheckListView
+	    <dswork.android.lib.ui.MultiCheck.MultiCheckListView2
 	        android:id="@+id/listView" 
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent" 
@@ -41,9 +41,10 @@
 	</LinearLayout>
 	<ProgressBar 
 	    android:id="@+id/waitingBar"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    style="@android:attr/progressBarStyleLargeInverse"/>
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="center"
+	    style="@android:attr/progressBarStyle"/>
 	<ImageView 
 	    android:id="@+id/refresh"
 	    android:layout_width="wrap_content"
