--- a/CodeBuilder/builder/template/java/base/controller.vm
+++ b/CodeBuilder/builder/template/java/base/controller.vm
@@ -74,8 +74,8 @@ public class ${Model}Controller extends BaseController
 	public String upd${Model}1()
 	{
 		Long id = req.getLong("keyIndex");
-		request.setAttribute("po", service.get(id));
-		request.setAttribute("page", req.getInt("page", 1));
+		put("po", service.get(id));
+		put("page", req.getInt("page", 1));
 		return "${Webmodule}/upd${Model}.jsp";
 	}
 	
@@ -99,8 +99,8 @@ public class ${Model}Controller extends BaseController
 	public String get${Model}()
 	{
 		Page<${Model}> pageModel = service.queryPage(getPageRequest());
-		request.setAttribute("pageModel", pageModel);
-		request.setAttribute("pageNav", new PageNav<${Model}>(request, pageModel));
+		put("pageModel", pageModel);
+		put("pageNav", new PageNav<${Model}>(request, pageModel));
 		return "${Webmodule}/get${Model}.jsp";
 	}
 
@@ -109,7 +109,7 @@ public class ${Model}Controller extends BaseController
 	public String get${Model}ById()
 	{
 		Long id = req.getLong("keyIndex");
-		request.setAttribute("po", service.get(id));
+		put("po", service.get(id));
 		return "${Webmodule}/get${Model}ById.jsp";
 	}
 }
