--- a/CodeBuilder/builder/template/java/jsp/add1.vm
+++ b/CodeBuilder/builder/template/java/jsp/add1.vm
@@ -52,7 +52,7 @@ request.setAttribute("param", req.getParameterValueMap(false, false));
 #if($colName==$memo)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><textarea name="$colName.ToLower()" style="width:100%;height:60px;"></textarea></td>
+		<td class="form_input"><textarea name="$colName.ToLower()" style="width:400px;height:60px;"></textarea></td>
 	</tr>
 #end
 #end
