--- a/CodeBuilder/builder/template/java/jsp/upd1.vm
+++ b/CodeBuilder/builder/template/java/jsp/upd1.vm
@@ -54,7 +54,7 @@ request.setAttribute("page", req.getInt("page", 1));
 #if($colName==$memo)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><textarea name="$colName.ToLower()" style="width:100%;height:60px;">${mf}{fn:escapeXml(po.$colName.ToLower())}</textarea></td>
+		<td class="form_input"><textarea name="$colName.ToLower()" style="width:400px;height:60px;">${mf}{fn:escapeXml(po.$colName.ToLower())}</textarea></td>
 	</tr>
 #end
 #end
