--- a/CodeBuilder/builder/template/java/mvc/upd.vm
+++ b/CodeBuilder/builder/template/java/mvc/upd.vm
@@ -46,7 +46,7 @@
 #if($colName==$memo)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><textarea name="$colName.ToLower()" style="width:100%;height:60px;">${mf}{fn:escapeXml(po.$colName.ToLower())}</textarea></td>
+		<td class="form_input"><textarea name="$colName.ToLower()" style="width:400px;height:60px;">${mf}{fn:escapeXml(po.$colName.ToLower())}</textarea></td>
 	</tr>
 #end
 #end
