--- a/CodeBuilder/builder/template/csharp/add.vm
+++ b/CodeBuilder/builder/template/csharp/add.vm
@@ -42,7 +42,7 @@
 #if($colName==$memo)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><textarea name="$colName.ToLower()" style="width:100%;height:60px;"></textarea></td>
+		<td class="form_input"><textarea name="$colName.ToLower()" style="width:400px;height:60px;"></textarea></td>
 	</tr>
 #end
 #end
