--- a/CodeBuilder/builder/template/csharp/getById.vm
+++ b/CodeBuilder/builder/template/csharp/getById.vm
@@ -31,7 +31,7 @@
 #if($colName==$memo)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><textarea class="readonlytext" style="width:100%;height:60px;">@ViewBag.po.$colName.ToLower()</textarea></td>
+		<td class="form_input"><textarea class="readonlytext" style="width:400px;height:60px;">@ViewBag.po.$colName.ToLower()</textarea></td>
 	</tr>
 #end
 #end
