--- a/CodeBuilder/builder/template/csharp/upd.vm
+++ b/CodeBuilder/builder/template/csharp/upd.vm
@@ -41,7 +41,7 @@
 #if($colName==$memo)
 	<tr>
 		<td class="form_title">$columnList.Comment</td>
-		<td class="form_input"><textarea name="$colName.ToLower()" style="width:100%;height:60px;">@ViewBag.po.$colName.ToLower()</textarea></td>
+		<td class="form_input"><textarea name="$colName.ToLower()" style="width:400px;height:60px;">@ViewBag.po.$colName.ToLower()</textarea></td>
 	</tr>
 #end
 #end
