--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -59,7 +59,9 @@ a:active {color:#182a2d;}/*激活*/
 .menuTool a.look    {background:url(img/menu.png) 0px -350px no-repeat;}
 .menuTool a.pause   {background:url(img/menu.png) 0px -375px no-repeat;}
 .menuTool a.pic     {background:url(img/menu.png) 0px -400px no-repeat;}
+/*
 .menuTool a.printer {background:url(img/menu.png) 0px -425px no-repeat;}
+*/
 .menuTool a.recheck {background:url(img/menu.png) 0px -450px no-repeat;}
 .menuTool a.refresh {background:url(img/menu.png) 0px -475px no-repeat;}
 .menuTool a.commit  {background:url(img/menu.png) 0px -500px no-repeat;}
@@ -73,26 +75,33 @@ a:active {color:#182a2d;}/*激活*/
 .menuTool a.user    {background:url(img/menu.png) 0px -625px no-repeat;}
 .menuTool a.warn    {background:url(img/menu.png) 0px -650px no-repeat;}
 
+.menuTool .bar {background:url(img/menu/bar.gif) 0px 0px no-repeat;}
 .menuTool .back {background:url(img/menu/back.gif) 0px 0px no-repeat;}
 .menuTool .close {background:url(img/menu/close.gif) 0px 0px no-repeat;}
-.menuTool .save {background:url(img/menu/save.gif) 0px 0px no-repeat;}
-.menuTool .upload {background:url('img/menu/upload.gif') 0px 0px no-repeat;}
 .menuTool .download {background:url('img/menu/download.gif') 0px 0px no-repeat;}
+.menuTool .pie {background:url(img/menu/pie.gif) 0px 0px no-repeat;}
+.menuTool .save {background:url(img/menu/save.gif) 0px 0px no-repeat;}
+.menuTool .printer {background:url('img/menu/printer.png') 0px 0px no-repeat;}
+.menuTool .upload {background:url('img/menu/upload.gif') 0px 0px no-repeat;}
 
 .menuTool .vline {background-color:silver;padding-left:1px;padding-right:0px;margin:0px 2px 0px 2px;}
 
 
 
+.menuTool-bar {background:url(img/menu/bar.gif) no-repeat;}
 .menuTool-back {background:url('img/menu/back.gif') no-repeat;}
 .menuTool-close {background:url(img/menu/close.gif) no-repeat;}
+.menuTool-download {background:url('img/menu/download.gif') no-repeat;}
+.menuTool-pie {background:url(img/menu/pie.gif) no-repeat;}
 .menuTool-save {background:url('img/menu/save.gif') no-repeat;}
 .menuTool-printer {background:url('img/menu/printer.png') no-repeat;}
+.menuTool-upload {background:url('img/menu/upload.gif') no-repeat;}
+
 .menuTool-leftarrow {background:url('img/menu/leftarrow.png') no-repeat;}
 .menuTool-rightarrow {background:url('img/menu/rightarrow.png') no-repeat;}
 .menuTool-uparrow {background:url('img/menu/uparrow.png') no-repeat;}
 .menuTool-downarrow {background:url('img/menu/downarrow.png') no-repeat;}
-.menuTool-upload {background:url('img/menu/upload.gif') no-repeat;}
-.menuTool-download {background:url('img/menu/download.gif') no-repeat;}
+
 
 .menuTool-excel {background:url(img/file/excel.gif) 0px 0px no-repeat;}
 .menuTool-exe {background:url(img/file/exe.gif) 0px 0px no-repeat;}
@@ -127,7 +136,9 @@ a:active {color:#182a2d;}/*激活*/
 .menuTool-look    {background:url(img/menu.png) 0px -350px no-repeat;}
 .menuTool-pause   {background:url(img/menu.png) 0px -375px no-repeat;}
 .menuTool-pic     {background:url(img/menu.png) 0px -400px no-repeat;}
+/*
 .menuTool-printer {background:url(img/menu.png) 0px -425px no-repeat;}
+*/
 .menuTool-recheck {background:url(img/menu.png) 0px -450px no-repeat;}
 .menuTool-refresh {background:url(img/menu.png) 0px -475px no-repeat;}
 .menuTool-commit  {background:url(img/menu.png) 0px -500px no-repeat;}
