--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -1,6 +1,6 @@
 /*IE6背景图缓存BUG*/
 * {filter:expression(document.execCommand("BackgroundImageCache", false, true));}
-/** {filter:gray;}*/
+/* {filter:gray;}*/
 
 /*---全局---*/
 html,body {height:100%;border:0;padding:0px;margin:0px;}
@@ -234,5 +234,5 @@ td.form_bottom {height:30px;background-color:#ffffff;text-align:center;vertical-
 .divMenuRight ul li.sep {padding:0px;height:1px;background-color:#dddddd;}
 
 #div_maskContainer {display:none;}
-#div_Mask {z-index:9999;position:absolute;left:0px;top:0px;background-color:#EFF4FA;filter:alpha(opacity = 100);}
-#div_loading {z-index:10000;width:300px;height:60px;position:absolute;border:1px outset #B4E0F2;padding-top:40px;text-align:center;background-color:#E9F0F9;filter:alpha(opacity = 100);!important}
+#div_maskBackground {z-index:9999;position:absolute;left:0px;top:0px;background-color:#EFF4FA;filter:alpha(opacity = 100);}
+#div_maskMessage {z-index:10000;width:300px;height:60px;position:absolute;border:1px outset #B4E0F2;padding-top:40px;text-align:center;background-color:#E9F0F9;filter:alpha(opacity = 100);!important}
