--- a/CodeBuilder/htmlgen/template/edit.vm
+++ b/CodeBuilder/htmlgen/template/edit.vm
@@ -5,13 +5,13 @@
 <head>
 <title></title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="../../js/easyui/themes/default/easyui.css">
-<link rel="stylesheet" type="text/css" href="../../themes/default/frame.css" />
-<script type="text/javascript" src="../../js/jquery/jquery.js"></script>
-<script type="text/javascript" src="../../js/jquery/jquery.form.js"></script>
-<script type="text/javascript" src="../../js/jskey/jskey_core.js"></script>
-<script type="text/javascript" src="../../js/dswork/dswork.js"></script>
-<script type="text/javascript" src="../../js/dswork/form.js"></script>
+<link rel="stylesheet" type="text/css" href="../../../web/js/easyui/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css" href="../../../web/themes/default/frame.css" />
+<script type="text/javascript" src="../../../web/js/jquery/jquery.js"></script>
+<script type="text/javascript" src="../../../web/js/jquery/jquery.form.js"></script>
+<script type="text/javascript" src="../../../web/js/jskey/jskey_core.js"></script>
+<script type="text/javascript" src="../../../web/js/dswork/dswork.js"></script>
+<script type="text/javascript" src="../../../web/js/dswork/form.js"></script>
 <script type="text/javascript">
 $dswork.showNavTitle = "编辑";
 $(function(){$dswork.showNavigation($dswork.showNavTitle);});
@@ -40,7 +40,7 @@ $dswork.callback = function()
 	</tr>
 </table>
 <div class="line"></div>
-<form id="dataForm" method="post" action="../../submit.html">
+<form id="dataForm" method="post" action="../../../submit.html">
 <table border="0" cellspacing="1" cellpadding="0" class="listTable">
 #foreach($col in $list)
 	<tr>
