--- a/web/share/dswork/Views/Commons/Get.cshtml
+++ b/web/share/dswork/Views/Commons/Get.cshtml
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
+<script type="text/javascript" src="/web/js/easyui/jquery.easyui.js"></script>
+<script type="text/javascript" src="/web/js/jquery/jquery.form.js"></script>
 <script type="text/javascript" src="/web/js/jskey/jskey_core.js"></script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
 <script type="text/javascript" src="/web/js/dswork/get.js"></script>
@@ -19,7 +21,6 @@
 </style>
 <!--[if lte IE 6]><style type="text/css">html,body{padding:0;margin:0;_height:100%;_overflow:hidden;}body{_overflow:scroll;}</style><![endif]-->
 @RenderSection("head", false)
-<script type="text/javascript" src="/web/js/easyui/jquery.easyui.js"></script>
 </head>
 <body>
 @RenderBody()
