--- a/web/share/dswork/Views/Commons/Upd.cshtml
+++ b/web/share/dswork/Views/Commons/Upd.cshtml
@@ -3,8 +3,10 @@
 <head>
 <title>@RenderSection("title", false)</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
+<script type="text/javascript" src="/web/js/easyui/jquery.easyui.js"></script>
 <script type="text/javascript" src="/web/js/jquery/jquery.form.js"></script>
 <script type="text/javascript" src="/web/js/jskey/jskey_core.js"></script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
