--- a/CodeBuilder/builder/template/csharp/get.vm
+++ b/CodeBuilder/builder/template/csharp/get.vm
@@ -7,12 +7,12 @@
 }
 @section head{
 <script type="text/javascript">
-$(function(){
+${mf}(function(){
     ${mf}${Frame.ToLower()}.page.menu("Del${Model}.htm", "Upd${Model}1.htm", "Get${Model}ById.htm", "@ViewBag.pageModel.CurrentPage");
 });
 ${mf}${Frame.ToLower()}.doAjax = true;
 ${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.type == 1){
-	location.href = "get${Model}.htm?page=@ViewBag.pageModel.CurrentPage";
+	location.href = "Get${Model}.htm?page=@ViewBag.pageModel.CurrentPage";
 }};
 </script>
 }
@@ -29,14 +29,13 @@ ${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.
 <div class="line"></div>
 <form id="queryForm" method="post" action="Get${Model}.htm">
 <table border="0" cellspacing="0" cellpadding="0" class="queryTable">
+	<tr>
+		<td class="input">
 #foreach($col in $vo.ColumnList)#if($col.ColumnName!=$pk)
-	<tr>
-		<td class="title">$col.Comment：</td>
-		<td class="input"><input name="$col.ColumnName.ToLower()" value="@Request["$col.ColumnName.ToLower()"]" /></td>
-	</tr>
+			&nbsp;$col.Comment：<input type="text" name="$col.ColumnName.ToLower()" value="@Request["$col.ColumnName.ToLower()"]" />
 #end#end
-	<tr>
-		<td class="query" colspan="2"><input id="_querySubmit_" type="button" class="button" value="查询" /></td>
+		</td>
+		<td class="query"><input id="_querySubmit_" type="button" class="button" value="查询" /></td>
 	</tr>
 </table>
 </form>
@@ -50,13 +49,9 @@ ${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.
 		<td>$col.Comment</td>
 #end#end
 	</tr>
-@{
-    int i = 0;
-}
 @foreach(var d in @ViewBag.result)
 {
-    i++;
-	<tr class="@(i % 2 == 0 ? "list_even" : "list_odd")">
+	<tr>
 		<td><input name="keyIndex" type="checkbox" value="@d.id" /></td>
 		<td class="menuTool" keyIndex="@d.id">&nbsp;</td>
 #foreach($col in $vo.ColumnList)
@@ -67,7 +62,6 @@ ${mf}${Frame.ToLower()}.callback = function(){if(${mf}${Frame.ToLower()}.result.
 	</tr>
 }
 </table>
-<input id="_submit_" type="submit" style="display:none;" />
 <input name="page" type="hidden" value="@ViewBag.pageModel.CurrentPage" />
 </form>
 <table border="0" cellspacing="0" cellpadding="0" class="bottomTable">
