--- a/web/share/dswork/Views/Commons/AddAjax.cshtml
+++ b/web/share/dswork/Views/Commons/AddAjax.cshtml
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="/web/js/easyui/jquery.easyui.js"></script>
 <script type="text/javascript" src="/web/js/jquery/jquery.form.js"></script>
 <script type="text/javascript" src="/web/js/jskey/jskey_core.js"></script>
+<script type="text/javascript">$dswork.dotnet = true;</script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
 <script type="text/javascript" src="/web/js/dswork/form.js"></script>
 <script type="text/javascript">
