--- a/web/share/dswork/Views/Commons/GetById.cshtml
+++ b/web/share/dswork/Views/Commons/GetById.cshtml
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
 <script type="text/javascript" src="/web/js/easyui/jquery.easyui.js"></script>
 <script type="text/javascript" src="/web/js/jskey/jskey_core.js"></script>
+<script type="text/javascript">$dswork.dotnet = true;</script>
 <script type="text/javascript" src="/web/js/dswork/dswork.js"></script>
 <script type="text/javascript">
 	$(function(){try{$(".form_title").css("width", "20%");}catch(e){}});
